[gd_scene load_steps=10 format=2]

[ext_resource path="res://MiniGames/Pong/White.png" type="Texture" id=1]
[ext_resource path="res://Levels/Autoshooter/Player.gd" type="Script" id=2]
[ext_resource path="res://Levels/Autoshooter/HurtBox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 20 )

[sub_resource type="CircleShape2D" id=3]
radius = 400.0

[sub_resource type="CircleShape2D" id=4]
radius = 100.0

[sub_resource type="CircleShape2D" id=5]
radius = 15.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 512, 288 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.266667, 1, 0, 1 )
position = Vector2( -2.38419e-07, 9.53674e-07 )
scale = Vector2( 20, 40 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Attack" type="Node2D" parent="."]

[node name="SpearTimer" type="Timer" parent="Attack"]
wait_time = 1.5

[node name="SpearAttackTimer" type="Timer" parent="Attack/SpearTimer"]
wait_time = 0.075

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 3 )

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource( 4 )

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource( 5 )

[node name="SpawnProtection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnProtection"]
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="SpawnProtection/CollisionShape2D"]
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
rect_min_size = Vector2( 1024, 576 )
mouse_filter = 2
color = Color( 0, 1, 0.0392157, 0.0392157 )

[node name="context_map" type="Node2D" parent="."]

[node name="0" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( 0, -35 )
collision_mask = 128
collide_with_areas = true

[node name="1" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( 17.67, -17.67 )
collision_mask = 128
collide_with_areas = true

[node name="2" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( 35, 0 )
collision_mask = 128
collide_with_areas = true

[node name="3" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( 17.67, 17.67 )
collision_mask = 128
collide_with_areas = true

[node name="4" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 128
collide_with_areas = true

[node name="5" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( -17.67, 17.67 )
collision_mask = 128
collide_with_areas = true

[node name="6" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( -35, 0 )
collision_mask = 128
collide_with_areas = true

[node name="7" type="RayCast2D" parent="context_map"]
enabled = true
cast_to = Vector2( -17.67, -17.67 )
collision_mask = 128
collide_with_areas = true

[node name="DebugTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="hurt" from="HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="timeout" from="Attack/SpearTimer" to="." method="_on_SpearTimer_timeout"]
[connection signal="timeout" from="Attack/SpearTimer/SpearAttackTimer" to="." method="_on_SpearAttackTimer_timeout"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_GrabArea_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_CollectArea_area_entered"]
[connection signal="mouse_entered" from="SpawnProtection" to="." method="_on_SpawnProtection_mouse_entered"]
[connection signal="mouse_exited" from="SpawnProtection" to="." method="_on_SpawnProtection_mouse_exited"]
[connection signal="timeout" from="DebugTimer" to="." method="_on_DebugTimer_timeout"]

[editable path="HurtBox"]
